# dagoat

./: .dockerignore  .env.example  .gitignore  ALPHA_PILOT.md  ARCHITECTURE.md  ARCHITECTURE_CONVERGENCE.md  Cargo.toml  DEPLOY.md  Dockerfile  GoatCoin_Threat_Model.md  GoatCoin_Yellowpaper.md  GoatHAL_Isolation_Design.md  GoatHAL_Threat_Model.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  RUNTIME_VS_SPEC.md  docker-compose.yml  genesis.json
.github/workflows/: ci.yml
contracts/: .env.example  README.md  SEASON0_UI_RUNBOOK.md  dev-up.ps1  foundry.toml
contracts/script/: Deploy.s.sol  DeployBuyDeskFactory.s.sol  DeployEpochSettlement.s.sol  DeployFreeMarket.s.sol
contracts/src/: BuyDesk.sol  BuyDeskFactory.sol  EnrollmentRegistry.sol  EpochSettlement.sol  FounderResolver.sol  GoatCoin.sol  HoldbackEscrow.sol  IDisputeResolver.sol  JobVault.sol  RedemptionDesk.sol  WorkMinter.sol  WorkerBinding.sol
contracts/test/: BuyDesk.t.sol  BuyDeskFactory.t.sol  DeployEpochSettlement.t.sol  Eip712DesktopParity.t.sol  EnrollmentRegistry.t.sol  EnrollmentRegistryMetaTx.t.sol  EpochSettlement.t.sol  EpochSettlementAttribution.t.sol  EpochSettlementKeeperFee.t.sol  FounderResolver.t.sol  GoatCoin.t.sol  HoldbackEscrow.t.sol  Invariants.t.sol  InvariantsV2.t.sol  InvariantsV3.t.sol  JobVault.t.sol  RedemptionDesk.t.sol  RustDaemonMerkleParity.t.sol  WorkMinter.t.sol  WorkerBinding.t.sol
contracts/test/mocks/: MockUSDT.sol
desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  start-app.ps1  vite.config.js
desktop/src/: App.jsx  contributeMode.js  contributeMode.test.js  firstRun.test.js  journal.js  journal.stampRecovery.test.js  journal.test.js  main.jsx  manifest.js  manifest.test.js  market.js  market.test.js  ops.e2e.test.js  opsAccept.js  opsAccept.test.js  opsAccess.js  opsAccess.test.js  pendingRetry.js  pendingRetry.test.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  wallet.rs
desktop/src-tauri/src/workbackend/: catalog.rs  fah.rs  mod.rs  rehearsal.rs
desktop/src-tauri/tests/fixtures/: fah_v8_snapshot.json
desktop/src/chain/: abis.js  addresses.js  attribution.js  attribution.test.js  client.js  constants.js  enroll.js  errors.js  errors.test.js  format.js  format.test.js  rustAccount.js  rustAccount.test.js  tx.js  tx.test.js  wallet.js  wallet.test.js
desktop/src/chain/deployments/: 31337.epoch.json  31337.factory.json  31337.json  84532.json
desktop/src/components/: BackendCard.jsx  DeskTable.jsx  EarningStatus.jsx  EarningStatus.test.js  FahPreview.jsx  FirstRunUsername.jsx  HonestyBanner.jsx  NetworkSwitch.jsx
desktop/src/tabs/: Market.jsx  Miner.jsx  Miner.test.js  Ops.jsx  Wallet.jsx
goatcoin-rs/: ARCHITECTURE.md  Cargo.toml  README.md
goatcoin-rs/.github/workflows/: ci.yml
goatcoin-rs/crates/goat-backends/: Cargo.toml
goatcoin-rs/crates/goat-backends/src/: lib.rs  refcompute.rs  reference_a.rs  reference_b.rs
goatcoin-rs/crates/goat-backends/tests/: parity.rs
goatcoin-rs/crates/goat-ledger/: Cargo.toml
goatcoin-rs/crates/goat-ledger/src/: actors.rs  beacon.rs  ledger.rs  lib.rs
goatcoin-rs/crates/goat-net/: Cargo.toml
goatcoin-rs/crates/goat-net/src/: codec.rs  density.rs  distributed.rs  lib.rs  stats.rs  testnet.rs  transport.rs
goatcoin-rs/crates/goat-net/tests/: distributed.rs  testnet_acceptance.rs
goatcoin-rs/crates/goat-neutrality/: Cargo.toml
goatcoin-rs/crates/goat-neutrality/src/: main.rs
goatcoin-rs/crates/goat-protocol/: Cargo.toml
goatcoin-rs/crates/goat-protocol/src/: attestation_chain.rs  backend.rs  capability.rs  commit.rs  conformance.rs  hll.rs  lib.rs  maturity.rs  pqsign.rs  provenance.rs  types.rs  verification.rs
reference/: demo_conformance.py  demo_integration.py  demo_item2.py  demo_item3.py  demo_item4.py
reference/goathal/: __init__.py  attestation_chain.py  backend.py  capability.py  commit.py  conformance.py  maturity.py  neutrality.py  pqsign.py  types.py  verification.py
reference/goathal/backends/: __init__.py  _refcompute.py  reference_a.py  reference_b.py
reference/tests/: _capfixtures.py  test_attestation_chain.py  test_capability.py  test_commit.py  test_conformance.py  test_integration_demo.py  test_maturity.py  test_neutrality.py  test_verification.py
src/: crypto.rs  daemon.rs  gossip.rs  lib.rs  state.rs  transport.rs  types.rs
tools/goat-attestor/: .env.example  .gitignore  CLIPPY_CLEANUP_2026-07-17.md  Cargo.toml  README.md  start-relayer.ps1  sync-env-from-desktop.ps1
tools/goat-attestor/fixtures/: fah_user_alice.json  fah_user_bob.json
tools/goat-attestor/src/: chain.rs  challenger.rs  config.rs  evidence.rs  fah.rs  http_live.rs  lib.rs  main.rs  merkle.rs  proposer.rs  registry.rs  relayer.rs  rpc_chain.rs  settlement.rs
tools/goat-attestor/tests/: integration.rs  print_vectors.rs
