[package]
name = "dagoat"
version = "0.1.0"
description = "D.A. G.O.A.T. — the GoatCoin desktop node (alpha)."
authors = ["GoatCoin"]
edition = "2021"

# The Tauri app is a library (so mobile targets can link it) plus a thin main.rs binary.
[lib]
name = "dagoat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OS-level process priority backends for the Power Dial.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
