[package]
name = "goat-attestor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "GOAT FAH attribution attestor: proposer, challenger, watcher, EIP-712 relayer"

# Standalone package (not a member of the repo root workspace).
[workspace]

[[bin]]
name = "goat-attestor"
path = "src/main.rs"

[lib]
name = "goat_attestor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
hex = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
# Live chain (Phase 2.1) — match desktop alloy major 2.
alloy = { version = "2", features = [
    "providers",
    "provider-http",
    "rpc-types",
    "network",
    "signer-local",
    "consensus",
    "reqwest",
    "reqwest-rustls-tls",
] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
