[package]
name = "goat-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GoatCoin (GOAT) reference backends — DEVICE layer, below the GoatHAL trait. Device-specific by nature; excluded from the neutrality scan."

[dependencies]
goat-protocol = { path = "../goat-protocol" }
sha3.workspace = true
