[package]
name = "goat-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GoatCoin (GOAT) Phase 3 protocol core — device-agnostic. Must never name a device type or inspect content (Core Principle 7 / the standing design test)."

# INVARIANT: this crate depends on NO backend crate. The protocol/device boundary is
# enforced here at compile time.
[dependencies]
sha3.workspace = true
ml-dsa.workspace = true
